GET /users - return the user's products
